--- a/php/main.html
+++ b/php/main.html
@@ -22,7 +22,6 @@
                     <div class="row">
                         <div class="col s1">
                             <ul id="nav-hamburger" class="left">
-                                <!--<li><i class="material-icons">menu</i></li>-->
                                 <li> <a href="#" data-target="slide-out" class="sidenav-trigger show-on-medium-and-up"><i class="material-icons black-text">menu</i></a></li>
                             </ul>
                         </div>
@@ -64,7 +63,7 @@
             <li><a class="waves-effect" href="main.html"><i class="material-icons">cloud</i>Pagina Principal</a></li>
             <li><a class="waves-effect" href="pedidos.html"><i class="material-icons">person_pin</i>Pedidos</a></li>
             <li><a class="waves-effect" href="produto.html"><i class="material-icons">fastfood</i>Produtos</a></li>
-            <li><a class="waves-effect" href="#!"><i class="material-icons">flag</i>Promoção</a></li>
+            <li><a class="waves-effect" href="promocao.html"><i class="material-icons">flag</i>Promoção</a></li>
             <li><a class="waves-effect" href="#!"><i class="material-icons">trending_up</i>Estatisticas</a></li>
             <li><div class="divider"></div></li>
             <li><a class="subheader">Gerais</a></li>
@@ -79,6 +78,7 @@
 
 
     <main>
+
 
         <div class=" container" style=" width:90%;">
             <div class="card-panel">
