--- a/php/produto.html
+++ b/php/produto.html
@@ -61,16 +61,15 @@
                 <a href="#name"><span class="white-text name">Pizzaria Hudson</span></a>
                 <a href="#email"><span class="white-text email">pizariahudson@gmail.com</span></a>
             </div></li>
-            <li><a class="waves-effect" href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-            <li><a class="waves-effect" href="#!">Second Link</a></li>
+            <li><a class="waves-effect" href="main.html"><i class="material-icons">cloud</i>Pagina Principal</a></li>
+            <li><a class="waves-effect" href="pedidos.html"><i class="material-icons">person_pin</i>Pedidos</a></li>
+            <li><a class="waves-effect" href="produto.html"><i class="material-icons">fastfood</i>Produtos</a></li>
+            <li><a class="waves-effect" href="promocao.html"><i class="material-icons">flag</i>Promoção</a></li>
+            <li><a class="waves-effect" href="#!"><i class="material-icons">trending_up</i>Estatisticas</a></li>
             <li><div class="divider"></div></li>
-            <li><a class="subheader">itens</a></li>
-            <li><a class="waves-effect" href="produtos.html"><i class="material-icons">person_pin</i>Pedidos</a></li>
-            <li><a class="waves-effect" href="produtos.html"><i class="material-icons">fastfood</i>Produtos</a></li>
-            <li><a class="waves-effect" href="#!">Promoção</a></li>
-            <li><a class="waves-effect disabled" href="#!">Estatisticas</a></li>
+            <li><a class="subheader">Gerais</a></li>
             <li><a class="waves-effect disabled" href="#!"><i class="material-icons">settings</i>Definições</a></li>
-            <li><a class="waves-effect disabled" href="#!">Sair</a></li>
+            <li><a class="waves-effect disabled" href="#!"><i class="material-icons">clear</i>Sair</a></li>
         </ul>
         <!-- SideNav-->
     </header>
