--- a/php/pedidos.html
+++ b/php/pedidos.html
@@ -1,185 +1,50 @@
-<!DOCTYPE html>
-<html lang="pt-PT">
-<head>
-    <meta charset="UTF-8">
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="./../css/materialize.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="./../css/styles.css">
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
-
-<body class="blue-grey lighten-5">
-
-    <div id="tudo">
-        <header>
-            <div class="navbar-fixed">
-                <nav>
-                    <div class="nav-wrapper white black-text z-depth-3">
-                        <div class="row">
-                            <div class="col s1">
-                                <ul id="nav-hamburger" class="left">
-                                    <!--<li><i class="material-icons">menu</i></li>-->
-                                    <li> <a href="#" data-target="slide-out" class="sidenav-trigger show-on-medium-and-up"><i class="material-icons black-text">menu</i></a></li>
-                                </ul>
-                            </div>
-                            <div class="col s2 left">
-                                <a href="#" class="brand-logo black-text">Vectis Food</a>
-                            </div>
-                            <div class="col s3 offset-s8">
-                                <ul id="nav-mobile" class="right">
-                                    <li>
-                                        <div class="switch">
-                                        <span class="hide-on-small-and-down">
-                                            online
-                                        </span>
-                                            <label>
-                                                <input type="checkbox">
-                                                <span class="lever"></span>
-                                            </label>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-
-
-            </div>
-
-
-            <!-- SideNav -->
-            <ul id="slide-out" class="sidenav">
-                <li><div class="user-view">
-                    <div class="background">
-                        <img src="./../img/img.jpg">
-                    </div>
-
-                    <a href="#user"><img src="../img/logo.jpg" width="50" height="50" class="circle"></a>
-                    <a href="#name"><span class="white-text name">Pizzaria Hudson</span></a>
-                    <a href="#email"><span class="white-text email">pizariahudson@gmail.com</span></a>
-                </div></li>
-                <li><a class="waves-effect" href="main.html"><i class="material-icons">cloud</i>Pagina Principal</a></li>
-                <li><a class="waves-effect" href="pedidos.html"><i class="material-icons">person_pin</i>Pedidos</a></li>
-                <li><a class="waves-effect" href="produto.html"><i class="material-icons">fastfood</i>Produtos</a></li>
-                <li><a class="waves-effect" href="promocao.html"><i class="material-icons">flag</i>Promoção</a></li>
-                <li><a class="waves-effect" href="#!"><i class="material-icons">trending_up</i>Estatisticas</a></li>
-                <li><div class="divider"></div></li>
-                <li><a class="subheader">Gerais</a></li>
-                <li><a class="waves-effect disabled" href="#!"><i class="material-icons">settings</i>Definições</a></li>
-                <li><a class="waves-effect disabled" href="#!"><i class="material-icons">clear</i>Sair</a></li>
-            </ul>
-            <!-- SideNav-->
-        </header>
-
+<div id="pedidosPag">
+    <div class=" container" style=" width:90%;">
+</div>
         <br>
-        <br>
-        <br>
-
-
-
-        <main>
-
-            <div class=" container" style=" width:90%;">
-                <br>
-                <div class="row">
-                    <div class="col s12">
-                            <ul class="collection">
-                                <li class="collection-item avatar">
-                                    <span class="title">Title</span>
-                                    <p>First Line <br>
-                                        Second Line
-                                    </p>
-                                    <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-                                </li>
-                                <li class="collection-item avatar">
-                                    <i class="material-icons circle">folder</i>
-                                    <span class="title">Title</span>
-                                    <p>First Line <br>
-                                        Second Line
-                                    </p>
-                                    <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-                                </li>
-                                <li class="collection-item avatar">
-                                    <i class="material-icons circle green">insert_chart</i>
-                                    <span class="title">Title</span>
-                                    <p>First Line <br>
-                                        Second Line
-                                    </p>
-                                    <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-                                </li>
-                                <li class="collection-item avatar">
-                                    <i class="material-icons circle red">play_arrow</i>
-                                    <span class="title">Title</span>
-                                    <p>First Line <br>
-                                        Second Line
-                                    </p>
-                                    <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-                                </li>
-                            </ul>
-
-
-
-                    </div>
-
-                </div>
-
+        <div class="row">
+            <div class="col s12">
+                    <ul class="collection">
+                        <li class="collection-item avatar">
+                            <span class="title">Title</span>
+                            <p>First Line <br>
+                                Second Line
+                            </p>
+                            <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                        </li>
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle">folder</i>
+                            <span class="title">Title</span>
+                            <p>First Line <br>
+                                Second Line
+                            </p>
+                            <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                        </li>
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle green">insert_chart</i>
+                            <span class="title">Title</span>
+                            <p>First Line <br>
+                                Second Line
+                            </p>
+                            <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                        </li>
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle red">play_arrow</i>
+                            <span class="title">Title</span>
+                            <p>First Line <br>
+                                Second Line
+                            </p>
+                            <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+                        </li>
+                    </ul>
 
 
 
             </div>
 
+        </div>
 
-        </main>
 
 
-        <footer class="page-footer orange lighten-1">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">Outros Servicos</h5>
-                        <p class="grey-text text-lighten-4">Os nossos serviços ajudam a tornar a sua vida mais fácil.
-                            Receba pagamentos por encomendas feitas por si, venda os seus produtosa ao maior número de pessoas possível e compre os produtos no melhor preço.
-                        </p>
-                    </div>
-                    <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Serviços Vectis Fast Food:</h5>
-                        <ul>
-                            <li><a class="grey-text text-lighten-3" href="#">Loja</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#">Cliente</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#">Delivery</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-copyright orange darken-1">
-                <div class="container">
-                    © 2019 Vectis Fast Food Loja todos os direitos reservados
-                    <a class="grey-text text-lighten-4 right" href="#">Ir para o centro de ajuda</a>
-                </div>
-            </div>
-        </footer>
+
     </div>
-
-
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-<script src="./../js/Libs/js/jquery-3.3.1.min.js"></script>
-<script src="./../js/Libs/js/materialize.min.js"></script>
-
-<script type="module" src="./../js/index.js"></script>
-<script>
-    $(document).ready(function(){
-        $('.tabs').tabs();
-    });
-    $(document).ready(function(){
-        $('.sidenav').sidenav();
-    });
-</script>
-
-</body>
-</html>
