--- a/php/completas/produto.html
+++ b/php/completas/produto.html
@@ -278,7 +278,7 @@
 <script src="./../../js/Libs/js/jquery-3.3.1.min.js"></script>
 <script src="./../../js/Libs/js/materialize.min.js"></script>
 
-<script type="module" src="./../../js/index.js"></script>
+<script type="module" src="../../js/login.js"></script>
 <script>
     $(document).ready(function(){
         $('.sidenav').sidenav();
