--- a/php/completas/produtoView.html
+++ b/php/completas/produtoView.html
@@ -1,12 +1,12 @@
+
 <div class="col s12 m4 l3">
     <div class="card sticky-action">
         <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="./../img/img2.jpg">
+            <img class="activator" src="../../img/img2.jpg">
         </div>
         <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Pizza de Queijo<i class="material-icons right">keyboard_arrow_up</i></span>
-            <span class="red-text" style="text-decoration: line-through;">2.000 kz</span>
-            <span>1.500 kz</span>
+            <p>2.000 kz</p>
         </div>
         <div class="card-action">
             <a href="#">ELIMINAR</a>
