--- a/php/Login.html
+++ b/php/Login.html
@@ -58,7 +58,7 @@
     <script src="./../js/Libs/js/jquery-3.3.1.min.js" ></script>
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="./../js/Libs/js/materialize.min.js"></script>
-<script type="module" src="./../js/index.js"></script>
+<script type="module" src="../js/login.js"></script>
 
 </body>
 </html>
