--- a/php/completas/index.html
+++ b/php/completas/index.html
@@ -5,8 +5,8 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="./../../css/materialize.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="./../../css/styles.css">
+    <link type="text/css" rel="stylesheet" href="./../css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="./../css/styles.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -26,7 +26,7 @@
                             </ul>
                         </div>
                         <div class="col s2 left">
-                            <a href="#" class="brand-logo black-text">Vectis Food</a>
+                            <a href="#" class="brand-logo black-text">Wendy</a>
                         </div>
                         <div class="col s3 offset-s8">
                             <ul id="nav-mobile" class="right">
@@ -36,7 +36,7 @@
                                             online
                                         </span>
                                         <label>
-                                            <input type="checkbox">
+                                            <input type="checkbox" name="ckbOnline">
                                             <span class="lever"></span>
                                         </label>
                                     </div>
@@ -53,10 +53,10 @@
         <ul id="slide-out" class="sidenav">
             <li><div class="user-view">
                 <div class="background">
-                    <img src="./../../img/img.jpg">
+                    <img src="./../img/img.jpg">
                 </div>
 
-                <a href=""><img src="../../img/logo.jpg" width="50" height="50" class="circle"></a>
+                <a href=""><img src="" width="50" height="50" class="circle"></a>
                 <a href=""><span class="white-text name">Pizzaria Hudson</span></a>
                 <a href=""><span class="white-text email">pizariahudson@gmail.com</span></a>
             </div></li>
@@ -68,7 +68,7 @@
             <li><div class="divider"></div></li>
             <li><a class="subheader">Gerais</a></li>
             <li><a class="waves-effect disabled" href="#!"><i class="material-icons">settings</i>Definições</a></li>
-            <li><a class="waves-effect disabled" href="#!"><i class="material-icons">clear</i>Sair</a></li>
+            <li><a class="waves-effect modal-trigger" href="#modalSair"><i class="material-icons">clear</i>Sair</a></li>
         </ul>
         <!-- SideNav-->
     </header>
@@ -76,57 +76,115 @@
 <br>
 
 
-
     <main id="principal">
-        <div class=" container" style=" width:90%;">
-            <div class="card-panel">
-                <div class="row">
-                    <div class="col s2">
-                        <img src="./../img/logo.jpg" width="100" height="100" class="circle responsive-img left">
-                    </div>
-                    <div class="col s10">
-                        <b class="left-align">Pizaria Hudson</b>
-                        <div class="">Pizaria</div>
-                        <div class="blue-grey-text">pizariahudson@gmail.com</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-
-                <div class="col s12 m5">
-                    <div class="card-panel">
-                        <b class="">Missão</b>
-                        <p class="blue-grey-text">Lorem upum psu gdaum cmenmape nobgama fambs bregardaem </p>
-                    </div>
-                </div>
-                <div class="col s12 m5">
-                    <div class="card-panel">
-                        <b class="">Visão</b>
-                        <p class="blue-grey-text">Levar a melhor piza a todos as famílias. Lorem upum psu gdaum cmenmape nobgama fambs bregardaem</p>
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </main>
+    <div class="col s12 center">
+        <div id="IndexProgressBar" class="preloader-wrapper active small">
+            <div class="spinner-layer spinner-red-only">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+            </div><div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Structure -->
+    <div id="modalSair" class="modal">
+        <div class="modal-content">
+            <h4>Solicitação para sair</h4>
+            <p>Tens a certeza que pretendes sair?</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="modal-close waves-effect waves-green btn-flat">não</a>
+            <a href="#" class="modal-close waves-effect waves-green btn-flat">sim</a>
+        </div>
+    </div>
+    <!-- Modal Structure -->
+
+    <a class="waves-effect waves-light btn modal-trigger" href="#modalPedidos">Novo pedido</a>
+
+
+    <!-- Modal Structure -->
+    <div id="modalPedidos" class="modal">
+        <div class="modal-content">
+            <h4 align="center">NOVO PEDIDO</h4>
+
+
+            <div class="row">
+                <div class="col m4">
+                    <h6>CODIGO: 1230123</h6>
+                </div>
+                <div class="col m8">
+                    <h6 align="right">TEMPO DE PREPARO: 00:30:00 </h6><br>
+                </div>
+            </div>
+
+            <h6 align="center">LISTA DE PRODUTOS</h6><br>
+
+
+            <table>
+                <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Qtd.</th>
+                    <th>Preço</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                <tr>
+                    <td>Piza de Queijo jhasdjhj  sakd kasd</td>
+                    <td>5</td>
+                    <td>500 Kz</td>
+                </tr>
+                <tr>
+                    <td>Gasosa</td>
+                    <td>4</td>
+                    <td>800 Kz</td>
+                </tr>
+                </tbody>
+            </table>
+
+
+            <h6>TOTAL: 1,300 kz </h6>
+
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Negar</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceitar</a>
+        </div>
+    </div>
+    <!-- Modal Structure -->
 
 
     <footer class="page-footer orange lighten-1">
-        <div class="container">
+        <div class="container" style="width: 90%;">
             <div class="row">
-                <div class="col l6 s12">
+                <div class="col l4 s12">
                     <h5 class="white-text">Outros Servicos</h5>
                     <p class="grey-text text-lighten-4">Os nossos serviços ajudam a tornar a sua vida mais fácil.
                         Receba pagamentos por encomendas feitas por si, venda os seus produtosa ao maior número de pessoas possível e compre os produtos no melhor preço.
                     </p>
                 </div>
-                <div class="col l4 offset-l2 s12">
+                <div class="col l4 s12">
                     <h5 class="white-text">Serviços Vectis Fast Food:</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="#">Loja</a></li>
                         <li><a class="grey-text text-lighten-3" href="#">Cliente</a></li>
                         <li><a class="grey-text text-lighten-3" href="#">Delivery</a></li>
+                    </ul>
+                </div>
+                <div class="col l4 s12">
+                    <h5 class="white-text"></h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#">FAQs</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#">Ajuda</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#">Mensagem</a></li>
                     </ul>
                 </div>
             </div>
@@ -143,19 +201,26 @@
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-<script src="./../../js/Libs/js/jquery-3.3.1.min.js"></script>
-<script src="./../../js/Libs/js/materialize.min.js"></script>
+<script src="./../js/Libs/js/jquery-3.3.1.min.js"></script>
+<script src="./../js/Libs/js/materialize.min.js"></script>
+<script src="./../js/Libs/js/Chart.min.js"></script>
 
-<script type="module" src="../../js/login.js"></script>
+
+
+<!--<script type="module" src="js/login.js"></script>-->
+<!------------------- Firebase App is always required and must be first ---------------------->
+
+<!--<script src="https://www.gstatic.com/firebasejs/5.7.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.7.2/firebase-messaging.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
+-->
+
+
+<script type="module" src="./../js/lojaExec.js"></script>
+
+
 <script>
-    $(document).ready(function(){
-        $('.tabs').tabs();
-        $('.sidenav').sidenav();
 
-        //$('.modal').modal();
-
-        //$('.fixed-action-btn').floatingActionButton({ hoverEnabled: false});
-    });
 </script>
 
 </body>
