--- a/php/index.html
+++ b/php/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-PT">
 <head>
     <meta charset="UTF-8">
+    <title>Lubisse</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -19,30 +20,40 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper white black-text z-depth-3">
-                    <div class="row">
+                    <div class="row" style="width: 110%;">
                         <div class="col s1">
-                            <ul id="nav-hamburger" class="left">
+                            <ul id="nav-hamburger" class="left-align">
                                 <li> <a href="#" data-target="slide-out" class="sidenav-trigger show-on-medium-and-up"><i class="material-icons black-text">menu</i></a></li>
                             </ul>
                         </div>
-                        <div class="col s2 left">
-                            <a href="#" class="brand-logo black-text">Wendy</a>
+                        <div class="col s4 left">
+                            <a href="#!" class="brand-logo left-align"><img src="../img/logo.png" height="40" width="40" class="responsive-img"/></a>
+                            <!--<a href="#!" class="brand-logo blue-grey-text left-align">Lub<span class="orange-text">easy</span></a>-->
                         </div>
-                        <div class="col s3 offset-s8">
-                            <ul id="nav-mobile" class="right">
-                                <li>
-                                    <div class="switch">
-                                        <span class="hide-on-small-and-down">
-                                            online
-                                        </span>
-                                        <label>
-                                            <input type="checkbox" name="ckbOnline">
-                                            <span class="lever"></span>
-                                        </label>
+                        <div class="col s3 offset-s4 right">
+                            <!-- Switch -->
+                            <div class="switch">
+                                <span class="hide-on-small-and-down">Online</span>
+
+                                <div id="onlineProgressBar" class="preloader-wrapper small valign-wrapper active">
+                                    <div class="spinner-layer spinner-green-only">
+                                        <div class="circle-clipper left">
+                                            <div class="circle"></div>
+                                        </div><div class="gap-patch">
+                                        <div class="circle"></div>
+                                    </div><div class="circle-clipper right">
+                                        <div class="circle"></div>
                                     </div>
-                                </li>
-                            </ul>
+                                    </div>
+                                </div>
+
+                                <label id="onlineCkb" class="hide">
+                                    <input name="ckbOnline" type="checkbox">
+                                    <span class="lever"></span>
+                                </label>
+                            </div>
                         </div>
+                        <div class="red hide barraVermelha" style="height: 3px;"></div>
                     </div>
                 </div>
             </nav>
@@ -64,10 +75,10 @@
             <li><a class="waves-effect" href="#pedidos"><i class="material-icons">person_pin</i>Pedidos</a></li>
             <li><a class="waves-effect" href="#produto"><i class="material-icons">fastfood</i>Produtos</a></li>
             <li><a class="waves-effect" href="#promocao"><i class="material-icons">flag</i>Promoção</a></li>
-            <li><a class="waves-effect" href="#!"><i class="material-icons">trending_up</i>Estatisticas</a></li>
+            <!--<li><a class="waves-effect" href="#!"><i class="material-icons">trending_up</i>Estatisticas</a></li>-->
             <li><div class="divider"></div></li>
             <li><a class="subheader">Gerais</a></li>
-            <li><a class="waves-effect disabled" href="#!"><i class="material-icons">settings</i>Definições</a></li>
+            <li><a class="waves-effect" href="#definicoes"><i class="material-icons">settings</i>Definições</a></li>
             <li><a class="waves-effect modal-trigger" href="#modalSair"><i class="material-icons">clear</i>Sair</a></li>
         </ul>
         <!-- SideNav-->
@@ -97,70 +108,38 @@
     <div id="modalSair" class="modal">
         <div class="modal-content">
             <h4>Solicitação para sair</h4>
-            <p>Tens a certeza que pretendes sair?</p>
+            <p>Tens a certeza que pretendes sair? Os usu]arios não vão poder ver o teu estado de actividade</p>
         </div>
         <div class="modal-footer">
-            <a href="#" class="modal-close waves-effect waves-green btn-flat">não</a>
-            <a href="#" class="modal-close waves-effect waves-green btn-flat">sim</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat orange-text">não</a>
+            <a href="#!" id="btnSair" class="modal-close waves-effect waves-green btn-flat">sim</a>
         </div>
     </div>
     <!-- Modal Structure -->
 
-    <a class="waves-effect waves-light btn modal-trigger" href="#modalProdutos">Novo pedido</a>
+
 
 
     <!-- Modal Structure -->
-    <div id="modalProdutos" class="modal">
+    <div id="modalCredenciaisDeAcesso" class="modal">
         <div class="modal-content">
-            <h4 align="center">NOVO PEDIDO</h4>
-
-
+            <h4 align="center">Credenciais de acesso</h4>
             <div class="row">
-                <div class="col m4">
-                    <h6>CODIGO: 1230123</h6>
-                </div>
-                <div class="col m8">
-                    <h6 align="right">TEMPO DE PREPARO: 00:30:00 </h6><br>
+                <div class="col s12">
+                    <p>Para proceder, deve inserir a sua senha</p>
+                    <form name="frmInserirSenha">
+                        <div class="input-field col s12">
+                            <input  id="senhaInserida" name="senhaInserida" type="password" class="validate">
+                            <label for="senhaInserida">Senha</label>
+                        </div>
+                        <button type="submit" class="waves-effect waves-orange  btn-flat right">Enviar</button>
+
+                    </form>
                 </div>
             </div>
-
-            <h6 align="center">LISTA DE PRODUTOS</h6><br>
-
-
-            <table>
-                <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Quantidade</th>
-                    <th>Preço</th>
-                </tr>
-                </thead>
-
-                <tbody>
-                <tr>
-                    <td>Piza de Queijo jhasdjhj  sakd kasd</td>
-                    <td>5</td>
-                    <td>500 Kz</td>
-                </tr>
-                <tr>
-                    <td>Gasosa</td>
-                    <td>4</td>
-                    <td>800 Kz</td>
-                </tr>
-                </tbody>
-            </table>
-
-
-            <h6>TOTAL: 1,300 kz </h6>
-
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Negar</a>
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceitar</a>
         </div>
     </div>
     <!-- Modal Structure -->
-
 
     <footer class="page-footer orange lighten-1">
         <div class="container" style="width: 90%;">
@@ -196,6 +175,7 @@
             </div>
         </div>
     </footer>
+
 </div>
 
 
@@ -203,23 +183,22 @@
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="./../js/Libs/js/jquery-3.3.1.min.js"></script>
 <script src="./../js/Libs/js/materialize.min.js"></script>
+<script src="./../js/Libs/js/Chart.min.js"></script>
 
 
-<!--<script type="module" src="js/index.js"></script>-->
+
+<!--<script type="module" src="js/login.js"></script>-->
 <!------------------- Firebase App is always required and must be first ---------------------->
 
-<script src="https://www.gstatic.com/firebasejs/5.7.2/firebase-app.js"></script>
+<!--<script src="https://www.gstatic.com/firebasejs/5.7.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase-messaging.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
-
+-->
 
 
 <script type="module" src="./../js/lojaExec.js"></script>
 
 
-<script>
-
-</script>
 
 </body>
 </html>
