--- a/php/promocao.html
+++ b/php/promocao.html
@@ -12,7 +12,7 @@
     <!-- Floating Recources-->
     <!-- Floating accent button -->
     <div class="fixed-action-btn">
-        <a class="btn-floating waves-effect btn-large red modal-trigger" href="#addProduto">
+        <a class="btn-floating waves-effect btn-large red modal-trigger" href="#modalAddPromocao">
             <i class="large material-icons">add</i>
         </a>
     </div>
@@ -20,14 +20,146 @@
 
 
     <!-- Modal Structure -->
-    <div id="addProduto" class="modal">
-        <div class="modal-content">
-            <h4>Modal Header</h4>
-            <p>A bunch of text</p>
-        </div>
-        <div class="modal-footer">
-            <a href="#" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-        </div>
+    <div id="modalAddPromocao" class="modal">
+        <form name="frmAdidionarPromocao">
+            <div class="modal-content">
+                <h4>Adicionar uma Promocao</h4>
+
+                <div class="input-field col s12">
+                    <input id="nome" name="nome" type="text">
+                    <label for="nome">Nome</label>
+                </div>
+
+                <div class="file-field input-field">
+                    <div class="btn">
+                        <span>Imagem</span>
+                        <input type="file" name="imagem" accept="image/*">
+                    </div>
+                    <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text" placeholder="(Opcional) Escolha a imagem relativa ao produto">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="tempoDePreparo" name="tempoDePreparo" type="time" class="validate">
+                        <label for="tempoDePreparo">Preparo (h:m)</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input type="number" name="preco" step="0.01" id="preco">
+                        <label for="preco">Preço (Kz)</label>
+                    </div>
+                </div>
+                <div class="input-field col s12">
+                    <input id="dataTermino" name="dataTermino" type="date" class="validate">
+                    <label for="dataTermino" class="active">Data de Término</label>
+                </div>
+                <div class="input-field col s12">
+                    <textarea id="textarea1" name="descricao" class="materialize-textarea"></textarea>
+                    <label for="textarea1">Descrição</label>
+                </div>
+
+
+
+
+
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Sair</a>
+                <button type="submit" class="waves-effect waves-green btn-flat">Criar</button>
+            </div>
+        </form>
+    </div>
+    <!-- Modal Structure -->
+
+
+    <!-- Modal Structure -->
+    <div id="modalEditarPromocao" class="modal">
+        <form name="frmEditarPromocao">
+            <div class="modal-content">
+                <h4>Editar uma Promocao</h4>
+
+                <div class="row">
+                    <div class="col s6">
+                        <img class="responsive-img" name="imagemP" src=" ">
+                    </div>
+                    <div class="col s6">
+                        <a href="#modalEditarFotoPromocao" class="btn btn-flat modal-trigger">Alterar</a>
+                    </div>
+
+                </div>
+                <div class="input-field col s12">
+                    <input id="nomeP" name="nomeP" type="text">
+                    <label for="nomeP" class="active">Nome</label>
+                </div>
+                <input type="hidden" name="txtPromocaoIdentifier">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="tempoDePreparoP" name="tempoDePreparoP" type="time" class="validate">
+                        <label for="tempoDePreparoP">Preparo (h:m)</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input type="number" name="precoP" step="0.01" id="precoP">
+                        <label for="precoP" class="active">Preço (Kz)</label>
+                    </div>
+                </div>
+                <div class="input-field col s12">
+                    <input id="dataTerminoP" name="dataTerminoP" type="date" class="validate">
+                    <label for="dataTerminoP" class="active">Data de Término</label>
+                </div>
+                <div class="input-field col s12">
+                    <textarea id="textarea1P" name="descricaoP" class="materialize-textarea"></textarea>
+                    <label for="textarea1P" class="active">Descrição</label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Sair</a>
+                <button type="submit" class="waves-effect waves-green btn-flat">Guardar</button>
+            </div>
+        </form>
+    </div>
+    <!-- Modal Structure -->
+
+    <!-- Modal Structure -->
+    <div id="modalEditarFotoPromocao" class="modal">
+        <form name="frmEditarImagemPromocao">
+            <div class="modal-content">
+                <h4>Foto para Promoção</h4>
+                <div class="col s6">
+                    <div class="file-field input-field">
+                        <div class="btn">
+                            <span>Imagem</span>
+                            <input type="file" name="imagemNovaPromocao" accept="image/*">
+                        </div>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text" placeholder="(Opcional) Escolha a imagem relativa à promoção">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Sair</a>
+                <button type="submit" class="waves-effect waves-green btn-flat">Guardar</button>
+            </div>
+        </form>
+    </div>
+    <!-- Modal Structure -->
+
+    <!-- Modal Structure -->
+    <div id="modalEliminarPromocao" class="modal">
+        <form name="frmEliminarPromo">
+            <div class="modal-content">
+                <h4>Terminar uma Promoção</h4>
+                <p>Você tem certeza que pretende terminar esta promoção? Esta operação é irreversível</p>
+                <label>
+                    <input type="hidden" class="hide" name="txtEliminarIdentifierPromocao">
+                </label>
+                <p>Nome da promoção: <span id="txtEliminarPromocaoNome"></span></p>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat orange-text">Sair</a>
+                <button type="submit" class="waves-effect waves-green btn-flat">Eliminar</button>
+            </div>
+        </form>
     </div>
     <!-- Modal Structure -->
 </div>
